feat(API): Add PATCH method
