# back/public/swagger.json
@@ -54,6 +54,28 @@
       },
       "DrinkCreation": {
         "$ref": "#/components/schemas/Omit_Drink._id_"
+      },
+      "Partial_DrinkCreation_": {
+        "properties": {
+          "category": {
+            "type": "string"
+          },
+          "name": {
+            "type": "string"
+          },
+          "date": {
+            "type": "number",
+            "format": "double"
+          },
+          "providedBy": {
+            "type": "string"
+          }
+        },
+        "type": "object",
+        "description": "Make all properties in T optional"
+      },
+      "PartialDrink": {
+        "$ref": "#/components/schemas/Partial_DrinkCreation_"
       }
     },
     "securitySchemes": {}
@@ -179,6 +201,43 @@
             "application/json": {
               "schema": {
                 "$ref": "#/components/schemas/DrinkCreation"
+              }
+            }
+          }
+        }
+      },
+      "patch": {
+        "operationId": "PatchDrinkRoute",
+        "responses": {
+          "200": {
+            "description": "Ok",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "string"
+                }
+              }
+            }
+          }
+        },
+        "tags": ["Drinks"],
+        "security": [],
+        "parameters": [
+          {
+            "in": "path",
+            "name": "id",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/PartialDrink"
               }
             }
           }
